experimental/ir/testdata/syntax/proto2_edition.proto.stderr.txt
error: proto2 use the `syntax` keyword
  --> testdata/syntax/proto2_edition.proto:2:1
   |
 2 | edition = proto2;
   | ^^^^^^^
  help: replace with `syntax`
   |
 2 | - edition = proto2;
 2 | + syntax = proto2;
   |
   = help: proto2 is technically an edition, but cannot use `edition`

error: the value of a `edition` declaration must be a string literal
  --> testdata/syntax/proto2_edition.proto:2:11
   |
 2 | edition = proto2;
   |           ^^^^^^
  help: add quotes to make this a string literal
   |
 2 | edition = "proto2";
   |           +      +

encountered 2 errors
